--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,9 +5,10 @@ agent:
     type: e1-standard-2
     os_image: ubuntu2004
 blocks:
-  - name: 'Block #1'
+  - name: "Block #1"
     task:
       jobs:
-        - name: 'Job #1'
+        - name: "Job #1"
           commands:
             - checkout
+            - pnpm install
